--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -175,7 +175,7 @@ input, select, textarea {
 	}
 
 		a:hover {
-			color: #E27689;
+			color: #245ae3;
 			border-bottom-color: rgba(255, 255, 255, 0);
 		}
 
